atualizações sem o css

--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,6 @@
-
+body{
+  /* background-color: #000; */
+}
 table {
     border-collapse: collapse;
     display: flex;
@@ -25,3 +27,12 @@ table {
   input {
     margin-bottom: 10px;
   }
+  .error{
+
+    border: 2px solid red;
+}
+
+.valid{
+
+    border: 2px solid rgb(0, 255, 0);
+}
