--- a/estilo.css
+++ b/estilo.css
@@ -48,13 +48,12 @@ body {
   margin-bottom: 10px;
 }
 .dicas select{
-  width: 250px;
-  height: 34px;
+  width: 265px;
+  height: 41px;
   background: rgba(231, 238, 240, 0.92);
   border-radius: 8px;
-  border: none;
   text-align: center;
-  margin-left: -46px;
+  margin-left: -41px;
   font-family: 'Anton', sans-serif;
 }
 .subtitulo{
@@ -86,11 +85,11 @@ td {
   background-color: #ccc;
 }*/
 
-.error {
+.vermelho {
   border: 2px solid red;
 }
 
-.valid {
+.verde {
   border: 2px solid rgb(0, 255, 0);
 }
 .lista{
@@ -98,4 +97,6 @@ td {
   margin-top: -298px;
   font-family: 'Imprima', sans-serif;
   font-size: 20px;
+  text-align:start;
+  text-align: justify;
 }
